classDiagram
  direction LR

  class missionRoleList {
    MISSION_OWNER
    MISSION_SUBSCRIBER
    MISSION_READONLY_SUBSCRIBER
  }

  class missionStatus {
    MISSION_ACTIVE
    MISSION_PENDING
    MISSION_DELETED
    MISSION_COMPLETED_SUCCESS
    MISSION_COMPLETED_FAILED
  }

  class MissionChangeType {
    CREATE_MISSION
    DELETE_MISSION
    ADD_CONTENT
    REMOVE_CONTENT
    CREATE_DATA_FEED
    DELETE_DATA_FEED
    MAP_LAYER
  }

  class Topic {
    +topic_name: str
    +topic_path: str
    +topic_description: str
    +topic_id: Optional[str]
  }

  class TeamRole {
    TEAM_MEMBER
    TEAM_LEAD
    HQ
    SNIPER
    MEDIC
    FORWARD_OBSERVER
    RTO
    K9
  }

  class Marker {
    +local_id: str
    +object_destination_hash: Optional[str]
    +origin_rch: Optional[str]
    +object_identity_storage_key: Optional[str]
    +marker_type: str
    +symbol: str
    +name: str
    +category: str
    +lat: float
    +lon: float
    +notes: Optional[str]
    +time: Optional[datetime]
    +stale_at: Optional[datetime]
    +created_at: datetime
    +updated_at: datetime
  }

  class checklistStatus {
    PENDING
    COMPLETE
    COMPLETE_LATE
    LATE
  }

  class checklistTaskStatus {
    PENDING
    COMPLETE
    COMPLETE_LATE
    LATE
  }

  class checklistColumnType {
    SHORT_STRING
    LONG_STRING
    INTEGER
    ACTUAL_TIME
    RELATIVE_TIME
  }

  class checklistMode {
    ONLINE
    OFFLINE
  }

  class checklistSyncState {
    LOCAL_ONLY
    UPLOAD_PENDING
    SYNCED
  }

  class checklistOriginType {
    RCH_TEMPLATE
    BLANK_TEMPLATE
    CSV_IMPORT
    EXISTING_TEMPLATE_CLONE
  }

  class checklistUserTaskStatus {
    PENDING
    COMPLETE
  }

  class checklistSystemColumnKey {
    DUE_RELATIVE_DTG
  }

  class AssetStatus {
    AVAILABLE
    IN_USE
    LOST
    MAINTENANCE
    RETIRED
  }

  class Mission {
    +Missionid: Long
    +description: String
    +Topic: Topic
    +path: String
    +classification: String
    +tool: String
    +keywords: String[0..*]
    +parent: Mission[0..1]
    +children: Mission[0..*]
    +feeds: String[0..*]
    +zones: Zone[0..*]
    -MissionTeam: Team
    +passwordhash: String
    +defaultrole: missionRoleList
    -MissionPriority: int
    -missionStatus: missionStatus
    +ownerRole: missionRoleList
    +token: String
    +inviteonly: Boolean
    +missionchanges: MissionChange[0..*]
    +expiration: DateTime
    +Mission_Associates_LogEntry: LogEntry[0..*]
    +Mission_Associates_MissionRole: missionRoleList[0..1]
  }

  class Team {
    +color: TeamColor
    -uid: int
    +teamName: String
    +teamdescription: String
  }

  class TeamMember {
    +icon: string
    +displayName: string
    +role: TeamRole
    +callsign: string
    +freq: decimal[0..1]
    +email: string[0..1]
    +phone: string[0..1]
    +modulation: string
    +availability: String[0..1]
    +certifications: String[0..*]
    +lastActive: DateTime[0..1]
    -rnsIdentity: string
  }

  class Client {
    +identity: str
    +last_seen: datetime
    +display_name: Optional[str]
    +metadata: Dict[str, Any]
  }

  class LogEntry {
    +content: String
    +entryuid: String
    +missionUID: String
    +servertime: DateTime
    +clientTime: DateTime
    +contenthashes: Marker[0..*]
    +keywords: String[0..*]
  }

  class checklist {
    +checklistColumns: checklistColumn[1..*]
    +checklistTasks: checklistTask[0..*]
    -missionID: Mission[0..1]
    -checklistStatus: checklistStatus
    +mode: checklistMode
    +syncState: checklistSyncState
    +originType: checklistOriginType
    +name: string
    +uid: string
    +description: string
    +startTime: DateTime
    +templateName: string
    +createdAt: DateTime
    +createdByTeamMembeRnsIdentity: String
    +updatedAt: DateTime
    +uploadedAt: DateTime[0..1]
    +templateUid: String[0..1]
    +templateVersion: int[0..1]
    +progressPercent: float
    +pendingCount: int
    +lateCount: int
    +completeCount: int
  }

  class checklistTask {
    +number: int
    +uid: string
    +value: string
    +userStatus: checklistUserTaskStatus
    +taskStatus: checklistTaskStatus
    +isLate: Boolean
    +customStatus: int
    +completeBy: String
    +completedByTeamMembeRnsIdentity: String[0..1]
    +dueRelativeTime: DateTime
    +dueRelativeMinutes: int[0..1]
    +notes: string
    +rowBackgroundColor: String[0..1]
    +completedDTG: DateTime
    +completedAt: DateTime[0..1]
    +dueDTG: DateTime
  }

  class checklistCell {
    +cellUid: String
    +taskUid: String
    +columnUid: String
    +value: String[0..1]
    +updatedAt: DateTime
    +updatedByTeamMembeRnsIdentity: String[0..1]
  }

  class checklistColumn {
    +columnUid: String
    +columnName: string
    +displayOrder: int
    +columnType: checklistColumnType
    +columnEditable: Boolean
    +backgroundColor: String[0..1]
    +textColor: String[0..1]
    +isRemovable: Boolean
    +systemKey: checklistSystemColumnKey[0..1]
  }

  class CheckListtemplate {
    +checklist: checklist
    +uid: String
    +templateName: String
    +description: String
    +createdAt: DateTime
    +createdByTeamMembeRnsIdentity: String
    +updatedAt: DateTime
    +sourceTemplateUid: String[0..1]
    +serverOnly: Boolean
  }

  class checklistFeedPublication {
    +publicationUid: String
    +checklistUid: String
    +missionFeedUid: String
    +publishedAt: DateTime
    +publishedByTeamMembeRnsIdentity: String
  }

  class MissionTaskAssignment {
    +assignmentUid: String
    +missionID: String
    +taskUid: String
    +teamMembeRnsIdentity: String
    +assignedBy: String[0..1]
    +assignedAt: DateTime
    +dueDTG: DateTime[0..1]
    +status: checklistTaskStatus
    +notes: String[0..1]
  }

  class MissionChange {
    +hashes: Marker[0..*]
    +uid: String
    +name: String
    +teamMemberRnsIdentity: String
    +missionID: String
    +timestamp: DateTime
    +notes: String
    +changeType: MissionChangeType
    +isFederatedChange: Boolean
  }

  class Asset {
    +assetUid: String
    +name: String
    +assetType: String
    +serialNumber: String[0..1]
    +status: AssetStatus
    +location: String[0..1]
    +notes: String[0..1]
  }

  class Zone {
    +zoneId: String
    +name: String
    +points: ZonePoint[3..200]
    +createdAt: DateTime
    +updatedAt: DateTime
  }

  class ZonePoint {
    +lat: float
    +lon: float
  }

  class Skill {
    +skillUid: String
    +name: String
    +category: String[0..1]
    +description: String[0..1]
    +proficiencyScale: String[0..1]
  }

  class TeamMemberSkill {
    +teamMembeRnsIdentity: String
    +skillUid: String
    +level: int
    +validatedBy: String[0..1]
    +validatedAt: DateTime[0..1]
    +expiresAt: DateTime[0..1]
  }

  class TaskSkillRequirement {
    +taskUid: String
    +skillUid: String
    +minimumLevel: int
    +isMandatory: Boolean
  }

  class TeamColor {
    YELLOW
    RED
    BLUE
    ORANGE
    MAGENTA
    MAROON
    PURPLE
    DARK_BLUE
    CYAN
    TEAL
    GREEN
    DARK_GREEN
    BROWN
  }

  Mission "0..1" --> "0..*" Mission : parent/children
  Mission "1" o-- "0..*" MissionChange : Mission_Associates_MissionChange
  Mission "1" o-- "0..*" LogEntry : Mission_Associates_LogEntry
  Mission "1" o-- "1..*" Team : Mission_Associates_Team
  Mission "1" o-- "0..*" Zone : Mission_Associates_Zones
  Mission "1" o-- "0..*" MissionTaskAssignment : Mission_Associates_TaskAssignments
  Team "1" o-- "1..*" TeamMember : Team_Associates_TeamMember
  TeamMember "0..*" --> "0..1" Client : TeamMember_Associates_Client
  TeamMember "1" o-- "0..*" Asset : TeamMember_Associates_Assets
  Zone "1" o-- "3..200" ZonePoint : Zone_Associates_Points

  Mission "1" --> "0..*" checklist : Mission_Associates_checklist
  checklist "1" o-- "0..*" checklistTask : checklist_Associates_checklistTasks
  checklist "1" o-- "1..*" checklistColumn : checklist_Associates_checklistColumns
  checklist "1" --> "0..1" CheckListtemplate : checklist_Associates_templates
  checklist "1" o-- "0..*" checklistFeedPublication : checklist_Associates_feedPublications
  checklistTask "1" o-- "0..*" MissionTaskAssignment : task_Associates_assignments
  checklistTask "1" o-- "0..*" TaskSkillRequirement : task_Associates_skillRequirements
  checklistTask "1" o-- "1..*" checklistCell : task_Associates_cells
  checklistColumn "1" o-- "0..*" checklistCell : column_Associates_cells
  TeamMember "1" o-- "0..*" MissionTaskAssignment : member_Associates_assignments
  MissionTaskAssignment "0..*" -- "0..*" Asset : assignment_Associates_assets
  TeamMember "1" o-- "0..*" TeamMemberSkill : TeamMember_Associates_Skills
  Skill "1" o-- "0..*" TeamMemberSkill : Skill_Associates_members
  Skill "1" o-- "0..*" TaskSkillRequirement : Skill_Associates_taskRequirements

  Mission --> missionRoleList : defaultRole/ownerRole
  Mission --> Topic : topic
  Mission --> missionStatus : missionStatus
  MissionChange --> MissionChangeType : changeType
  Asset --> AssetStatus : status
  Team --> TeamColor : color
  TeamMember --> TeamRole : role
  checklist --> checklistMode : mode
  checklist --> checklistSyncState : syncState
  checklist --> checklistOriginType : originType
  checklist --> checklistStatus : checklistStatus
  checklistTask --> checklistUserTaskStatus : userStatus
  checklistTask --> checklistTaskStatus : taskStatus
  MissionTaskAssignment --> checklistTaskStatus : status
  checklistColumn --> checklistSystemColumnKey : systemKey
  checklistColumn --> checklistColumnType : columnType

  %% Invariants:
  %% - Exactly one checklistColumn has systemKey=DUE_RELATIVE_DTG and columnType=RELATIVE_TIME.
  %% - DUE_RELATIVE_DTG column cannot be removed (isRemovable=false).
  %% - taskStatus is derived from userStatus, dueDTG, and completedAt.
  %% - A checklist is complete when all checklistTask.userStatus values are COMPLETE.
  %% - OFFLINE checklists must be SYNCED before checklistFeedPublication is allowed.
